fix: Add overflow hidden

--- a/src/containers/Carousel/components/Slider/index.module.css
+++ b/src/containers/Carousel/components/Slider/index.module.css
@@ -1,7 +1,7 @@
 .carousel {
   display: flex;
   position: relative;
-  /* overflow: hidden; */
+  overflow: hidden;
 }
 
 .slider {
